[gd_scene load_steps=2 format=2]

[ext_resource path="res://connect.gd" type="Script" id=2]

[node name="connect" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="vboxMain" type="VBoxContainer" parent="."]
margin_left = 480.0
margin_top = 270.0
margin_right = 480.0
margin_bottom = 270.0

[node name="lblError" type="Label" parent="vboxMain"]
visible = false
margin_right = 45.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="btnRetry" type="Button" parent="vboxMain"]
visible = false
margin_right = 45.0
margin_bottom = 20.0
text = "Retry"

[connection signal="pressed" from="vboxMain/btnRetry" to="." method="_on_btnRetry_pressed"]
